# cc_switch_sub2api

./: .gitignore  README.md  cc-switch-db-分析.md
backend_patch/: README.md  routes_snippet.go
cc_usage_reporter/: .gitignore  README.md  cc-usage-reporter-gui.spec  cc-usage-reporter.spec  config.example.json  config.sidecar.example.json  pyproject.toml  requirements.txt
cc_usage_reporter/.github/workflows/: release.yml
cc_usage_reporter/cc_usage_reporter/: __init__.py  __main__.py  autostart.py  cli.py  config.py  daemon.py  database.py  deps.py  gui.py  release.py  reporter.py  scheduler.py  state.py  sub2api_client.py  tray.py
cc_usage_reporter/dev/: mock_server.py  register_task.ps1
cc_usage_reporter/packaging/common/: publish.sh
cc_usage_reporter/packaging/linux/: install_systemd_user.sh
cc_usage_reporter/packaging/macos/: build.sh  install_launchd.sh  release_dir.sh
cc_usage_reporter/packaging/windows/: build.ps1  download_winsw.ps1  publish.ps1  release_dir.ps1
cc_usage_reporter/release/cc-usage-reporter-v1.0.0-windows-20260701-165540/: install-linux.sh  install-macos.sh  install.ps1
cc_usage_reporter/release/cc-usage-reporter-v1.0.0-windows-20260701-165540/config/: config.example.json  config.sidecar.example.json
cc_usage_reporter/release/cc-usage-reporter-v1.0.0-windows-20260701-165540/docs/: INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  RELEASE_LAYOUT.md
cc_usage_reporter/service_templates/linux/: cc-usage-reporter.service
cc_usage_reporter/service_templates/windows/: cc-usage-reporter.xml
sidecar/: .gitignore  Dockerfile  (+4 more)
(+73 files in other folders)
